# retro-bg-sr-Retro-Background-Super-Resolution

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
configs/: logging.yaml  models.yaml  paths.yaml
notebooks/: pipeline.ipynb
scripts/: download_models.sh  run_full_pipeline.sh
src/: __init__.py  cli.py
src/data/: __init__.py  loader.py  transforms.py
src/enhancement/: __init__.py  atmospheric.py  detail_enhancer.py  postprocess.py  upscaler.py  video.py
src/utils/: __init__.py  logging.py  metrics.py  viz.py
tests/: conftest.py  test_data.py  test_enhancement.py  test_utils.py
